<resources>
    <string name="app_name">moran</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="login_tv_pwd">密码:</string>
    <string name="login_tv_pwd_again">重复密码:</string>
    <string name="login_tv_email">邮箱:</string>

    <string name="login">登录</string>
    <string name="login_register">注册新账号</string>

    <string name="register">注册</string>
    <string name="register_login">登录账号</string>
    <string name="input_email">请输入邮箱</string>
    <string name="register_username">用户名:</string>
</resources>
