<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_login_register"
    android:orientation="vertical"
    tools:context="com.geekband.moran.activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/all_background"
        android:gravity="center"
        >
        <com.geekband.moran.customview.CircleImageView
            android:id="@+id/circle_img"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:src="@drawable/menu_publish"
            />

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="蓦然"
            android:layout_below="@id/circle_img"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_tv_email"
        android:textColor="@color/login_tv"
        android:textSize="14sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        />
    <EditText
        android:id="@+id/edt_login_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/white_bg_shape"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:padding="3dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_tv_pwd"
        android:textColor="@color/login_tv"
        android:textSize="14sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        />
    <EditText
        android:id="@+id/edt_login_pwd"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/white_bg_shape"
        android:inputType="textPassword"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:padding="3dp"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/orange_bg_shape"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:text="@string/login"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:text="@string/register"
        android:textColor="@color/login_tv"
        />




</LinearLayout>
